ttdl (0.5.0) unstable; urgency=medium

  * Added 256-indexed and RGB colors support in config

  * Added time tracking support:
  - new commands 'start' and 'stop' to start and stop timer
  - new column 'spent' - time spent for a todo
  - new symbol in 'Done' column 'T' - marking a todo active(running)

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sat, 19 Jan 2019 23:57:48 -0800

ttdl (0.4.0) unstable; urgency=medium

  * A list of IDs can be set in command line: "ttdl list 2,3,4"

  * Fix adding todos that start with project or context

  * Two new commands: append and prepend

  * Option '--human' supports list of field to show in relative format. Empty
    list means show all dates as relative ones

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sun, 13 Jan 2019 21:17:51 -0800

ttdl (0.3.2) unstable; urgency=medium

  * Change command detection rule:
  If the first word is not a command, and the subject is not empty then
  the command is Add;
  If the first word is not a command and there is no subject then the
  command is List;

  * New option: 'version' - show application version

 -- Vladimir Markelov <vmatroskin@gmail.com>  Wed, 09 Jan 2019 21:43:01 -0800